@@ -12,6 +12,11 @@
    - markus@cvs.openbsd.org 2003/06/12 19:12:03
      [scard.c scard.h ssh-agent.c ssh.c]
      add sc_get_key_label; larsch at trustcenter.de; bugzilla#591
+   - markus@cvs.openbsd.org 2003/06/16 08:22:35
+     [ssh-rsa.c]
+     make sure the signature has at least the expected length (don't
+     insist on len == hlen + oidlen, since this breaks some smartcards)
+     bugzilla #592; ok djm@
 
 20030614
  - (djm) Update license on fake-rfc2553.[ch]; ok itojun@
@@ -527,4 +532,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2805 2003/06/18 10:28:40 djm Exp $
+$Id: ChangeLog,v 1.2806 2003/06/18 10:29:01 djm Exp $
